platform/kubernetes/base/api-gateway/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  namespace: shopsphere-apps
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: api-gateway
    app.kubernetes.io/component: api-entry-point
  ports:
    - name: http
      port: 8000
      targetPort: http
      protocol: TCP
